# jni-idea-demo

./: .gitignore  README.adoc
src/c/: CMakeLists.txt  ru_hse_jnidemo_Native.c  ru_hse_jnidemo_Native.h
src/java/ru/hse/jnidemo/: Main.java  Native.java
